okay vscat2 it is

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "vscat",
+    "name": "vscat2",
     "publisher": "oflatt",
     "displayName": "vsCat",
     "description": "This extension increases your productivity by over 200% by playing meow sounds while you code.",
